Fix styles for pre tag on board to cut off and align properly

--- a/src/styles/components/_board.sass
+++ b/src/styles/components/_board.sass
@@ -12,3 +12,10 @@
         
     .posts
         position: relative
+
+    pre
+        width: 100%
+        display: inline-block
+        text-overflow: ellipsis
+        text-align: left !important
+        overflow: hidden
